@@ -229,6 +229,7 @@ following image formats are supported:
     @tab Codec originally used in Feeble Files game.
 @item Electronic Arts CMV    @tab     @tab  X
     @tab Used in NHL 95 game.
+@item Electronic Arts TGV    @tab     @tab  X
 @item FFmpeg Video 1         @tab  X  @tab  X
     @tab experimental lossless codec (fourcc: FFV1)
 @item Flash Screen Video     @tab  X  @tab  X
