@@ -30,7 +30,7 @@
 #include "libavutil/avutil.h"
 
 #define LIBAVCODEC_VERSION_MAJOR 51
-#define LIBAVCODEC_VERSION_MINOR 62
+#define LIBAVCODEC_VERSION_MINOR 63
 #define LIBAVCODEC_VERSION_MICRO  0
 
 #define LIBAVCODEC_VERSION_INT  AV_VERSION_INT(LIBAVCODEC_VERSION_MAJOR, \
@@ -188,6 +188,7 @@ enum CodecID {
     CODEC_ID_BFI,
     CODEC_ID_CMV,
     CODEC_ID_MOTIONPIXELS,
+    CODEC_ID_TGV,
 
     /* various PCM "codecs" */
     CODEC_ID_PCM_S16LE= 0x10000,
